--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   <title>RadiumX UTCTF2024 Challenge Writeup / Forensics / Contracts</title>
 </head>
 <body>
-  <embed src="utctf-F-Contracts.pdf" type="application/pdf" width="100%" height="600px" />
+  <embed src="utctf-F-Contracts.pdf" type="application/pdf" width="100%" height="100%" />
 </body>
 </html>
