--- a/index.html
+++ b/index.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html style="height: 100%;">
 <head>
   <title>RadiumX UTCTF2024 Challenge Writeup / Forensics / Contracts</title>
+  <style>
+    body, html {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+    }
+    embed {
+      display: block; /* Removes the default margin of the embed element */
+      width: 100%;
+      height: 100%;
+    }
+  </style>
 </head>
 <body>
-  <embed src="utctf-F-Contracts.pdf" type="application/pdf" width="100%" height="100%" />
+  <embed src="utctf-F-Contracts.pdf" type="application/pdf" />
 </body>
 </html>
